fixed button alignments; added focus for input fields; fixed logic for selecting dashboard after dashboard deletion

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -6,6 +6,10 @@
     float: right;
 }
 
+.align-right {
+    text-align: right;
+}
+
 /* entire container, keeps perspective */
 .flip-container {
 	perspective: 1000px;
